Add form to save new NewsArticle Comments

--- a/app/views/comments/_index.slim
+++ b/app/views/comments/_index.slim
@@ -1,7 +1,15 @@
 .comments-wrapper
   h5 Comments
   
-  
+  - if current_user
+    = form_for(@new_comment, url: create_comment_news_article_path, html: { method: :post }) do |f|
+        
+      .input-group.mb-3
+        = f.text_field :message, autofocus: false, autocomplete: 'off', placeholder: "Write a comment", class: 'form-control'
+        
+        .input-group-append
+          .input-group-text.submit-button
+            = f.submit '', class: 'btn btn-link send-message-button'
   
   - comments.each do |comment|
     .comment-wrapper
@@ -13,7 +21,7 @@
         
       .comment-content-wrapper
         .comment-user-name
-          = comment.user.full_name
+          = comment.user.full_name.present? ? comment.user.full_name : comment.user.username
         .comment-date
           = comment.created_at.strftime('%d.%m.%Y')
         .comment-text
