--- a/app/webpack/stylesheets/home/trends.scss
+++ b/app/webpack/stylesheets/home/trends.scss
@@ -30,7 +30,7 @@
 .trends-wrapper .trend-image-wrapper {
   display: flex;
   justify-content: center;
-  background-color: green;
+  background-color: $color-light-grey;
   position: relative;
   max-width: 40px;
   min-width: 40px;;
