--- a/app/webpack/stylesheets/custom_fields.scss
+++ b/app/webpack/stylesheets/custom_fields.scss
@@ -8,7 +8,7 @@
   span.select2-selection {
     border: none;
     border-radius: 0;
-    border-bottom: 1px solid $color-grey;
+    border-bottom: 1px solid $color-light-grey;
   }
   
   &.dropdown { margin: 0 0 24px 0; }
@@ -17,7 +17,7 @@
 form .form-control {
   border: none;
   border-radius: 0;
-  border-bottom: 1px solid $color-grey;
+  border-bottom: 1px solid $color-light-grey;
   padding: 0.375rem 0.7rem;
 }
 
@@ -39,10 +39,14 @@ form select.form-control { padding: 0.375rem 0rem; }
 .input-group .input-group-prepend .input-group-text,
 .input-group .input-group-append .input-group-text {
   border: none;
-  border-bottom: 1px solid $color-grey;
+  border-bottom: 1px solid $color-light-grey;
   border-radius: 0;
   background-color: $color-white;
   padding: 0.375rem 0.25rem 0.375rem 0rem;
+  
+  &.submit-button {
+    padding: 0;
+  }
 }
 
 // Input field configure
@@ -81,4 +85,12 @@ select {
 .local-errors {
   margin: 2px 0px;
   color: $color-red;
+}
+
+// Buttons
+// # Submit button
+input[type="submit"].send-message-button {
+  background-image: url('../images/icons/ic_send_message.png');
+  background-repeat: no-repeat;
+  padding: 0rem 0.75rem;
 }
