Add styles for NewsArticle show

--- a/app/webpack/stylesheets/main-elements.scss
+++ b/app/webpack/stylesheets/main-elements.scss
@@ -6,3 +6,9 @@
   background-color: $color-light-grey;
   object-fit: cover;
 }
+
+// Full Article, Post image
+.url-full-image {
+  width: 100%;
+  border-radius: 4px;
+}
