--- a/app/webpack/stylesheets/news_articles/index.scss
+++ b/app/webpack/stylesheets/news_articles/index.scss
@@ -1,6 +1,25 @@
 // Show Article
 .news-article-wrapper {
   width: 100%;
-  border: 1px solid green;
-  height: 800px;
+  
+  .news-info-panel {
+    position: relative;
+  }
+  
+  .news-article-text {
+    margin: 20px 0;
+    
+    .news-article-title {
+      font-size: 16px;
+      font-weight: 400;
+    }
+    
+    .news-article-description {
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 20px;
+      letter-spacing: 0.25px;
+      opacity: 80%;
+    }
+  }
 }
