--- a/app/views/news_articles/_show.slim
+++ b/app/views/news_articles/_show.slim
@@ -1,1 +1,21 @@
 .news-article-wrapper
+  - if news_article.img_url.present?
+    = image_tag(news_article.img_url, class: 'url-full-image')
+  - else
+    = image_pack_tag('media/images/bg-picture-authentication.png', class: 'url-full-image')
+    
+  .news-info-panel
+    .info-panel
+      .info-panel-value-wrapper
+        i class=(news_article.is_lited(current_user) ? "ic lit active" : "ic lit")
+        span.info-panel-value #{news_article.lits.count}
+        
+      .info-panel-value-wrapper
+        i class=(news_article.is_commented(current_user) ? "ic comment active" : "ic comment")
+        span.info-panel-value #{news_article.comments.count}
+    
+  .news-article-text
+    .news-article-title
+      = news_article.title
+    .news-article-description
+      = news_article.description
