--- a/app/views/comments/_index.slim
+++ b/app/views/comments/_index.slim
@@ -10,20 +10,21 @@
         .input-group-append
           .input-group-text.submit-button
             = f.submit '', class: 'btn btn-link send-message-button'
-  
-  - comments.each do |comment|
-    .comment-wrapper
-      .comment-image-wrapper
-        - if comment.user.profile_picture.url
-          = image_tag(comment.user.profile_picture.square_320.url, class: 'profile-image')
-        - else
-          = image_pack_tag('media/images/icons/btn_add_photo.png', class: 'profile-image')
-        
-      .comment-content-wrapper
-        .comment-user-name
-          = comment.user.full_name.present? ? comment.user.full_name : comment.user.username
-        .comment-date
-          = comment.created_at.strftime('%d.%m.%Y')
-        .comment-text
-          = comment.message
+            
+  .comments-scroll
+    - comments.each do |comment|
+      .comment-wrapper
+        .comment-image-wrapper
+          - if comment.user.profile_picture.url
+            = image_tag(comment.user.profile_picture.square_320.url, class: 'profile-image')
+          - else
+            = image_pack_tag('media/images/icons/btn_add_photo.png', class: 'profile-image')
+          
+        .comment-content-wrapper
+          .comment-user-name
+            = comment.user.full_name.present? ? comment.user.full_name : comment.user.username
+          .comment-date
+            = comment.created_at.strftime('%d.%m.%Y')
+          .comment-text
+            = comment.message
           
