--- a/app/views/news_articles/_show.slim
+++ b/app/views/news_articles/_show.slim
@@ -4,7 +4,7 @@
   - else
     = image_pack_tag('media/images/bg-picture-authentication.png', class: 'url-full-image')
     
-  .news-info-panel
+  .news-info-panel value="#{news_article.id}"
     .info-panel
       .info-panel-value-wrapper
         i class=(news_article.is_lited(current_user) ? "ic lit active" : "ic lit")
