Render NewsArticles by categories

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -22,7 +22,7 @@ html
         span.navbar-toggler-icon
       #navbarSupportedContent.collapse.navbar-collapse
         ul.navbar-nav.mr-auto
-          li.nav-item.active
+          li.nav-item
             = link_to 'Home', root_path, class: 'nav-link'
           li.nav-item
             = link_to 'Groups', root_path, class: 'nav-link'
