--- a/app/webpack/stylesheets/navigation_bar.scss
+++ b/app/webpack/stylesheets/navigation_bar.scss
@@ -2,7 +2,7 @@
   padding: 16px 0px !important;
   font-size: 14px;
   font-weight: 500;
-  border-bottom: 1px solid $color-grey;
+  border-bottom: 1px solid $color-light-grey;
 }
 
 .navbar .navbar-collapse {
