--- a/app/webpack/stylesheets/news_articles/index.scss
+++ b/app/webpack/stylesheets/news_articles/index.scss
@@ -3,7 +3,9 @@
   width: 100%;
   
   .news-info-panel {
+    margin-top: 16px;
     position: relative;
+    height: 48px;
   }
   
   .news-article-text {
