--- a/app/views/news_articles/_show.slim
+++ b/app/views/news_articles/_show.slim
@@ -12,12 +12,12 @@
   .news-info-panel value="#{news_article.id}"
     .info-panel
       .div class="#{ current_user ? 'info-panel-value-wrapper' : 'info-panel-value-wrapper pointer-disable' }"
-        i class=(news_article.is_lited(current_user) ? "ic lit active" : "ic lit")
-        span.info-panel-value #{news_article.lits.count}
+        i class=(news_article.is_lited(current_user) ? "ic lit reverse active" : "ic lit reverse")
+        span.info-panel-value.color-black #{news_article.lits.count}
         
       .info-panel-value-wrapper.pointer-disable
-        i class=(news_article.is_commented(current_user) ? "ic comment active" : "ic comment")
-        span.info-panel-value #{news_article.comments.count}
+        i class=(news_article.is_commented(current_user) ? "ic comment reverse active" : "ic comment reverse")
+        span.info-panel-value.color-black #{news_article.comments.count}
     
   .news-article-text
     .news-article-title
