Add mobile view for NewsArticle#show page

--- a/app/webpack/stylesheets/comments/index.scss
+++ b/app/webpack/stylesheets/comments/index.scss
@@ -56,3 +56,9 @@
     }
   }
 }
+
+@media (max-width: map-get($grid-breakpoints, "md")) {
+  .content-comment-wrapper { display: block; }
+  .comments-wrapper { margin-left: 0px; width: 100%; }
+  .comments-scroll .comment-wrapper { width: 100%; }
+}
