--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -45,9 +45,20 @@ html
               = image_pack_tag('media/images/icons/ic_dialog.png')
             .navbar-icon-wrappers
               = image_pack_tag('media/images/icons/ic_notification.png')
-            .navbar-icon-wrappers
-              = image_pack_tag('media/images/icons/ic_settings.png')
-              
+            
+            .navbar-icon-wrappers.dropdown
+              a.dropdown-toggle#dropdownMenuButton data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                = image_pack_tag('media/images/icons/ic_settings.png')
+              .dropdown-menu.dropdown-menu-right aria-labelledby="dropdownMenuButton"
+                a.dropdown-item href="#" Customize
+                a.dropdown-item href="#" Change Country
+                a.dropdown-item href="#" My Images
+                a.dropdown-item href="#" My Video
+                a.dropdown-item href="#" Contact Us
+                a.dropdown-item href="#" Privacy Policy & Terms of Use
+                a.dropdown-item href="#" About Us
+                = link_to "Sign Out", destroy_user_session_path, method: :delete, class: 'dropdown-item no-border text-danger'
+                
             .d-inline-flex.ml-1
               - if current_user.profile_picture.present?
                 = image_tag(current_user.profile_picture.square_320.url, class: 'profile-image')
@@ -56,8 +67,6 @@ html
         - else
           = link_to "Sign Up", '', class: 'btn btn-link my-2 my-sm-0', data: { toggle: "modal", target: "#modal-sign-up" }
           = link_to "Sign In", '', class: 'btn btn-primary my-2 my-sm-0', data: { toggle: "modal", target: "#modal-sign-in" }
-          
-          // = link_to "Sign Out", destroy_user_session_path, method: :delete, class: 'btn btn-link my-2 my-sm-0'
               
     = yield
     
