Add ability to SignIn with username or email

--- a/app/views/shared/modals/_sign_in.slim
+++ b/app/views/shared/modals/_sign_in.slim
@@ -15,7 +15,7 @@
               .input-group-text
                 = image_pack_tag('media/images/icons/ic_email.png', class: 'img-responsive')
               
-            = f.email_field :email, autofocus: true, class: 'form-control', placeholder: 'Email'
+            = f.text_field :login, autofocus: true, class: 'form-control', placeholder: 'Login'
             
           .input-group.mb-3
             .input-group-prepend
