Update forgot password for Web

--- a/app/views/devise/passwords/create.js.erb
+++ b/app/views/devise/passwords/create.js.erb
@@ -1,5 +1,5 @@
 <%- if resource.errors.present? %>
-  $('#modal-forgot-password .global-errors').html("Incorrect Email/Question/Answer")
+  $('#modal-forgot-password .global-errors').html("Incorrect Answer")
 <% else %>
   let form = $('#modal-forgot-password form')
   form.hide()
