--- a/app/views/shared/modals/_sign_in.slim
+++ b/app/views/shared/modals/_sign_in.slim
@@ -29,7 +29,7 @@
                 = image_pack_tag('media/images/icons/ic_show_password.png', class: 'img-responsive', id: 'show-password-icon')
           
           .actions.text-right
-            = link_to 'Forgot password', '', data: { toggle: "modal", target: "#modal-forgot-password" }
+            = link_to 'Forgot password', '', data: { toggle: "modal", target: "#modal-forgot-password-security-question" }
             
           .actions
             = f.submit 'Sign In', class: 'btn btn-primary w-100'
