--- a/app/views/shared/modals/_sign_up.slim
+++ b/app/views/shared/modals/_sign_up.slim
@@ -36,7 +36,7 @@
             
           .material-field.dropdown
             = f.label 'Country'
-            = f.select :country_id, Country.all.map{ |q| [q.title, q.id, {'title': q.code}] }, required: true
+            = f.select :country_id, Country.all.map{ |q| [q.title, q.id, {'title': q.code}] }, {}, { class: 'form-control', required: true }
           
           .material-field.dropdown
             = f.label 'Select a Question'
