--- a/app/webpack/stylesheets/home/news.scss
+++ b/app/webpack/stylesheets/home/news.scss
@@ -2,6 +2,15 @@
   margin: 24px 0px;
 }
 
+.news-wrapper .news-switcher-title {
+  display: inline-block;
+  cursor: pointer;
+  
+  &.active {
+    color: $color-blue;
+  }
+}
+
 .news-wrapper .news-cards-wrapper {
 }
 
