--- a/app/webpack/stylesheets/modals/index.scss
+++ b/app/webpack/stylesheets/modals/index.scss
@@ -67,3 +67,16 @@ span.flag-text  { margin-left: 10px !important; }
   position: absolute;
   right: 0;
 }
+
+.select2-selection__choice {
+  border: none !important;
+  background-color: $color-white !important;
+  padding-left: 0 !important;
+}
+.select2-selection__choice__remove {
+  display: none !important;
+}
+
+.select2-search__field {
+  height: 21px !important;
+}
