--- a/app/webpack/stylesheets/comments/index.scss
+++ b/app/webpack/stylesheets/comments/index.scss
@@ -33,15 +33,13 @@
         font-size: 16px;
         line-height: 24px;
         letter-spacing: 0.15px;
-        max-width: 170px;
+        max-width: 118px;
         overflow: hidden;
         text-overflow: ellipsis;
       }
       
       .comment-date {
-        position: absolute;
-        top: 5px;
-        right: 0;
+        margin-top: 4px;
         color: $color-grey;
         font-size: 12px;
         line-height: 16px;
@@ -52,6 +50,25 @@
         font-size: 14px;
         max-width: 200px;
         word-wrap: break-word;
+      }
+      
+      .comment-lit {
+        cursor: pointer;
+        width: 30px;
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        right: 4px;
+        
+        span {
+          margin-bottom: 4px;
+          display: block;
+          font-size: 14px;
+          font-weight: 500;
+        }
+        
+        &.pointer-disable { cursor: default; }
       }
     }
   }
