Add active style for Categories links

--- a/app/webpack/stylesheets/home/categories.scss
+++ b/app/webpack/stylesheets/home/categories.scss
@@ -7,6 +7,10 @@
 .news-categories-list .category-element {
   display: inline-block;
   margin: 16px 50px 16px 0px;
+  
+  &.active {
+    a { color: $color-blue; }
+  }
 }
 
 .news-categories-list .category-element img {
