Add styles and fonts for Customize page

--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -32,6 +32,7 @@ $grid-breakpoints: (
 @import 'notification';
 @import 'toggle-switcher';
 @import './comments/index';
+@import './font-customaizer/index';
 @import './modals/index';
 @import './home/index';
 @import './news_articles/index';
