--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -64,7 +64,7 @@ html
               a.dropdown-toggle#dropdownMenuButton data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
                 = image_pack_tag('media/images/icons/ic_settings.png')
               .dropdown-menu.dropdown-menu-right aria-labelledby="dropdownMenuButton"
-                a.dropdown-item href="#" Customize
+                = link_to 'Customize', customize_fonts_path, class: 'dropdown-item'
                 a.dropdown-item href="#" Change Country
                 a.dropdown-item href="#" My Images
                 a.dropdown-item href="#" My Video
