--- a/app/webpack/stylesheets/custom_fields.scss
+++ b/app/webpack/stylesheets/custom_fields.scss
@@ -66,6 +66,40 @@ input[type=number] {
   -moz-appearance: textfield; /* Firefox */
 }
 
+// Custom Radiobox
+input[type=radio] {
+  margin-right: 6px;
+}
+
+input[type='radio']:after {
+  width: 15px;
+  height: 15px;
+  border-radius: 15px;
+  top: -2px;
+  left: -1px;
+  position: relative;
+  background-color: $color-white;
+  content: '';
+  display: inline-block;
+  visibility: visible;
+  border: 2px solid $color-blue;
+}
+
+input[type='radio']:checked:after {
+  width: 15px;
+  height: 15px;
+  border-radius: 15px;
+  top: -2px;
+  left: -1px;
+  position: relative;
+  background-color: $color-blue;
+  content: '';
+  display: inline-block;
+  visibility: visible;
+  border: 3px solid $color-white;
+  box-shadow: 0 0 0 2px $color-blue;
+}
+
 // Checkbox
 .form-check label {
   color: $color-black;
