Add live switcher for Customize page

--- a/app/webpack/stylesheets/font-customaizer/index.scss
+++ b/app/webpack/stylesheets/font-customaizer/index.scss
@@ -5,6 +5,7 @@
   
   .alphabet {
     text-align: center;
+    height: 120px;
     font-size: 24px;
     color: $color-blue;
     margin-top: 16px;
