--- a/app/views/fonts/customize.slim
+++ b/app/views/fonts/customize.slim
@@ -1,6 +1,6 @@
-.font-customizer-wrapper
+.font-customizer-wrapper#font-customizer
   h5 Customize
-  .alphabet.roboto.normal
+  #alphabet-view.alphabet class="#{@setting.font_family} #{@setting.font_style}"
     span A B C D E F G H I J K L M N O P Q R S T U V W X Y Z 1 2 3 4 5 6 7 8 9 0
 
   = form_for @setting, url: setting_path(@setting) do |f|
@@ -8,19 +8,19 @@
       .col-sm-8
         h6 Font-Family
         .material-field
-          = f.radio_button :font_family, 'Roboto'
+          = f.radio_button :font_family, 'roboto'
           = f.label 'Roboto'
         
         .material-field
-          = f.radio_button :font_family, 'Vivaldi'
+          = f.radio_button :font_family, 'vivaldi'
           = f.label 'Vivaldi'
         
         .material-field
-          = f.radio_button :font_family, 'Times New Roman'
+          = f.radio_button :font_family, 'times-new-roman'
           = f.label 'Times New Roman'
         
         .material-field
-          = f.radio_button :font_family, 'Broadway'
+          = f.radio_button :font_family, 'broadway'
           = f.label 'Broadway'
       
       .col-sm-4
