--- a/app/views/fonts/customize.slim
+++ b/app/views/fonts/customize.slim
@@ -1,6 +1,6 @@
 .font-customizer-wrapper#font-customizer
   h5 Customize
-  #alphabet-view.alphabet class="#{@setting.font_family} #{@setting.font_style}"
+  #alphabet-view.alphabet.fonts-styling class="#{@setting.font_family} #{@setting.font_style}"
     span A B C D E F G H I J K L M N O P Q R S T U V W X Y Z 1 2 3 4 5 6 7 8 9 0
 
   = form_for @setting, url: setting_path(@setting) do |f|
