--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -32,10 +32,11 @@ $grid-breakpoints: (
 @import 'notification';
 @import 'toggle-switcher';
 @import './comments/index';
-@import './font-customaizer/index';
+@import './font_customaizer/index';
 @import './modals/index';
 @import './home/index';
 @import './news_articles/index';
+@import './user_profile/index';
 
 /**************************************
 * Import stylesheets from node modules:
