--- a/app/views/users/show.slim
+++ b/app/views/users/show.slim
@@ -38,4 +38,4 @@
     .user-profile-assets
       - @images.each do |user_image|
         .image-wrapper
-          = image_tag(user_image.file.url, class: 'user-asset')
+          = image_tag(user_image.file.url, class: 'user-asset', data: { 'enlargeable': true })
