--- a/app/webpack/stylesheets/user_profile/images.scss
+++ b/app/webpack/stylesheets/user_profile/images.scss
@@ -16,6 +16,12 @@
   overflow: auto;
   white-space: nowrap;
   
+  &.full-list {
+    margin: auto;
+    overflow: unset;
+    white-space: unset;
+  }
+  
   // Hide scrolle bar
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
@@ -26,19 +32,46 @@
     position: relative;
     width: 193px;
     height: 185px;
-    border-radius: 4px;
     margin-right: 16px;
     object-fit: cover;
     text-align: center;
     cursor: pointer;
+    
+    &.custom-size {
+      width: calc(100% * (1/6) - 14px);
+      box-sizing: border-box;
+    }
+  }
+  
+  .image-wrapper.custom-size:nth-child(6n) {
+    margin-right: 0;
   }
   
   img.user-asset {
     width: 100%;
     height: 100%;
+    border-radius: 4px;
     object-fit: cover;
   }
 }
 
 // Hide scrolle bar
 .user-profile-assets::-webkit-scrollbar { display: none; }
+
+@media (max-width: map-get($grid-breakpoints, "lg")) {
+  .user-profile-assets .image-wrapper.custom-size:nth-child(4n) { margin-right: 16px; }
+  .user-profile-assets .image-wrapper.custom-size:nth-child(3n) { margin-right: 0px; }
+  .user-profile-assets .image-wrapper.custom-size {
+    width: calc(100% * (1/3) - 10.5px);
+    margin-right: 15px;
+  }
+}
+
+@media (max-width: map-get($grid-breakpoints, "md")) {
+  .user-profile-assets .image-wrapper.custom-size:nth-child(4n) { margin-right: 0px; }
+  .user-profile-assets .image-wrapper.custom-size:nth-child(3n) { margin-right: 0px; }
+  .user-profile-assets .image-wrapper.custom-size {
+    width: 100%;
+    margin-right: 0px;
+  }
+}
