Add UserImage upload for Web

--- a/app/views/user_images/index.slim
+++ b/app/views/user_images/index.slim
@@ -3,6 +3,9 @@
     - @images.each do |user_image|
       .image-wrapper.custom-size
         = image_tag(user_image.file.url, class: 'user-asset', data: { 'enlargeable': true })
-
+        
+.mt-4.d-flex.justify-content-end
+    = render 'form', image_uploader: @image_uploader unless @image_uploader.nil?
+            
 .mt-4.d-flex.justify-content-center
   = paginate @images
