--- a/app/views/users/show.slim
+++ b/app/views/users/show.slim
@@ -39,3 +39,12 @@
       - @images.each do |user_image|
         .image-wrapper
           = image_tag(user_image.file.url, class: 'user-asset', data: { 'enlargeable': true })
+          
+  .user-profile-assets-wrapper
+    h4 Videos
+    = link_to 'See all', user_video_path(@user.username), class: 'see-all-assets'
+    
+    .user-profile-assets
+      - @videos.each do |user_video|
+        .image-wrapper
+          = image_tag(user_video.file.thumb.url, class: 'user-asset', data: { 'video-url': user_video.file.url })
