--- a/app/webpack/stylesheets/user_profile/images.scss
+++ b/app/webpack/stylesheets/user_profile/images.scss
@@ -41,10 +41,26 @@
       width: calc(100% * (1/6) - 14px);
       box-sizing: border-box;
     }
+    
+    .destroy-asset {
+      position: absolute;
+      top: 8px;
+      right: 8px;
+    }
   }
   
   .image-wrapper.custom-size:nth-child(6n) {
     margin-right: 0;
+  }
+  
+  .image-wrapper:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left:0;
+    top: 0;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.31) 0%, rgba(0, 0, 0, 0) 44.22%);
   }
   
   img.user-asset {
