Add script for Video preview

--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -37,6 +37,7 @@ $grid-breakpoints: (
 @import './home/index';
 @import './news_articles/index';
 @import './user_profile/index';
+@import './video_player/index';
 
 /**************************************
 * Import stylesheets from node modules:
