--- a/app/views/user_videos/index.slim
+++ b/app/views/user_videos/index.slim
@@ -6,12 +6,15 @@
           = image_tag(user_video.file.thumb.url, class: 'user-asset', data: { 'video-url': user_video.file.url })
         - else
           = image_tag(user_video.file.url, class: 'user-asset')
-          
-        = link_to user_videos_path(id: user_video.id), class: 'destroy-asset', method: :delete, data: { confirm: 'Do you really want to delete this Video?' }  do
-          = image_pack_tag('media/images/icons/ic_delete_object.png')
+        
+        - if user_video.user == current_user
+          = link_to user_videos_path(id: user_video.id), class: 'destroy-asset', method: :delete, data: { confirm: 'Do you really want to delete this Video?' }  do
+            = image_pack_tag('media/images/icons/ic_delete_object.png')
         
 .mt-4.d-flex.justify-content-end
     = render 'form', image_uploader: @video_uploader unless @video_uploader.nil?
             
 .mt-4.d-flex.justify-content-center
   = paginate @videos
+  
+= render './shared/video_player/player', video_player_id: 'user-assets-video-palyer'
