--- a/app/views/users/show.slim
+++ b/app/views/users/show.slim
@@ -48,3 +48,5 @@
       - @videos.each do |user_video|
         .image-wrapper
           = image_tag(user_video.file.thumb.url, class: 'user-asset', data: { 'video-url': user_video.file.url })
+
+= render './shared/video_player/player', video_player_id: 'user-assets-video-palyer'
