--- a/app/views/shared/video_player/_player.slim
+++ b/app/views/shared/video_player/_player.slim
@@ -1,2 +1,2 @@
 .video-player-bg
-  = video_tag '', height: '100vh', controls: false, id: video_player_id, class: 'video-palyer'
+  = video_tag '', height: '100vh', controls: true, id: video_player_id, class: 'video-palyer'
