--- a/app/views/users/show.slim
+++ b/app/views/users/show.slim
@@ -2,9 +2,13 @@
   .user-profile-header
     .user-profile-banner-wrapper
       - if @user.banner_picture.url.present?
-        = image_tag(@user.banner_picture.url)
+        = image_tag(@user.banner_picture.url, class: 'user-profile-banner')
       - else
-        = image_pack_tag('media/images/placeholders/placeholder-banner-profile.png')
+        = image_pack_tag('media/images/placeholders/placeholder-banner-profile.png', class: 'user-profile-banner')
+      
+      - if @user == current_user
+        = link_to '', data: { toggle: "modal", target: "#modal-edit-profile" } do
+          = image_pack_tag('media/images/icons/ic_edit.png', class: 'user-profile-edit')
         
     .user-profile-avatar-wrapper
       - if @user.profile_picture.url
@@ -50,3 +54,4 @@
           = image_tag(user_video.file.thumb.url, class: 'user-asset', data: { 'video-url': user_video.file.url })
 
 = render './shared/video_player/player', video_player_id: 'user-assets-video-palyer'
+= render 'shared/modals/edit_profile'
