--- a/app/webpack/stylesheets/user_profile/header.scss
+++ b/app/webpack/stylesheets/user_profile/header.scss
@@ -15,10 +15,16 @@
       overflow: hidden;
       
       
-      img {
+      img.user-profile-banner {
         width: 100%;
         height: 100%;
         object-fit: cover;
+      }
+      
+      img.user-profile-edit {
+        position: absolute;
+        top: 16px;
+        right: 16px;
       }
     }
     
